samples/_failures_safe/1761330864_e52fed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb780e3d.c: In function ‘main’:
./samples/SAFE/__tmp_fb780e3d.c:150:15: error: expected ‘)’ at end of input
  150 |     if (strlen
      |        ~      ^
      |               )
./samples/SAFE/__tmp_fb780e3d.c:150:5: error: expected declaration or statement at end of input
  150 |     if (strlen
      |     ^~
